[package]
name = "pypi-import-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
content_inspector = "0.2.4"
tar = "0.4.38"
zip = { version = "0.6.3", features = ["deflate-zlib"] }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
#git2 = { version = "0.16.1", features = ["zlib-ng-compat"], default-features = false }
git2 = { git = "https://github.com/orf/git2-rs.git", branch="git-remote", features = ["zlib-ng-compat"], default-features = false }
url = { version = "2.3.1", features = ["serde"] }
reqwest = {version="0.11.13", features=["blocking"]}
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bzip2 = "0.4.4"
jwalk = "0.8.1"
rayon = "1.6.1"
itertools = "0.10.5"
crossbeam = "0.8.2"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
