[package]
name = "pypi-import-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
content_inspector = "0.2.4"
tar = "0.4.38"
zip = { version = "0.6.3", features = ["deflate-zlib", "zstd", "deflate"], default-features = false }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
#git2 = { version = "0.16.1", features = ["zlib-ng-compat"], default-features = false }
git2 = { git = "https://github.com/orf/git2-rs.git", branch="git-remote", features = ["zlib-ng-compat", "ssh"], default-features = false }
url = { version = "2.3.1", features = ["serde"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bzip2 = "0.4.4"
jwalk = "0.8.1"
rayon = "1.6.1"
itertools = "0.10.5"
crossbeam = "0.8.2"
rand = "0.8.5"
ureq = { version = "2.6.2" }
chrono = { version = "0.4.23", features = ["serde"] }
log = { version = "0.4.17", features=["release_max_level_info"]}
env_logger = "0.10.0"
indicatif = {version="0.17.3", features=["rayon"]}
fs_extra = "1.3.0"
# This commit is the only one that works?
#libcst = { git = "https://github.com/Instagram/LibCST", rev = "f9536b522f58d2b70ae8beb6b607b45ef08620e6", package = "libcst" }
#rustpython-parser = { features = ["lalrpop"], git = "https://github.com/orf/RustPython.git", branch = "serde" }

[profile.release]
#codegen-units = 1
lto = true
debug = true
